<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cl_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCurrentWeather"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            style="@style/BaseTextTheme"
            android:id="@+id/tvCityName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_24"
            android:layout_marginTop="@dimen/margin_xlarge"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout" app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tvCityName"
            app:layout_constraintTop_toBottomOf="@+id/tvCityName"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="300dp"
            android:layout_width="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/constraintLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clWind"
                android:layout_height="130dp"
                android:layout_width="90dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:text="@string/wind"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/BaseTextTheme"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/textView2"/>

                <TextView
                    android:id="@+id/tvWindSpeed"
                    style="@style/AdditionInfoTheme"
                    android:textSize="@dimen/text_24"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:text="@string/km_h"
                    style="@style/BaseTextTheme"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvWindSpeed"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clHumidity"
                android:layout_height="130dp"
                android:layout_width="90dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:text="@string/humidity"
                    style="@style/BaseTextTheme"
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tvHumidityPercent"
                    style="@style/AdditionInfoTheme"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:text="@string/percentage"
                    style="@style/BaseTextTheme"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvHumidityPercent"
                    app:layout_constraintStart_toStartOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="300dp"
                android:layout_width="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/clWind"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_height="0dp"
                    android:layout_width="0dp"
                    android:id="@+id/constraintLayout2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/llWeatherName">

                    <TextView
                        android:id="@+id/tvTemperatureBig"
                        style="@style/MainTemperatureText"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/llWeatherName"
                    android:layout_height="70dp"
                    android:layout_width="0dp"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <ImageView
                        android:layout_weight="1"
                        android:id="@+id/ivWeatherIcon"
                        android:layout_height="50dp"
                        android:layout_width="50dp"

                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="@dimen/margin_small"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/weather_icon_description" />

                    <TextView
                        android:id="@+id/tvCondition"
                        android:layout_weight="1"
                        style="@style/BaseTextTheme"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        app:layout_constraintTop_toTopOf="@+id/ivWeatherIcon"
                        app:layout_constraintBottom_toBottomOf="@+id/ivWeatherIcon"
                        app:layout_constraintStart_toEndOf="@+id/ivWeatherIcon"
                        android:layout_marginStart="8dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view"
            android:background="@color/colorDivider"
            android:layout_width="300dp"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintBottom_toTopOf="@id/rvWeatherForecast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWeatherForecast"
            android:layout_height="100dp"
            android:layout_width="300dp"
            android:scrollbars="none"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>